--- a/app-region-drag-mouse-events/src/app.json
+++ b/app-region-drag-mouse-events/src/app.json
@@ -27,8 +27,8 @@
   },
   "shortcut": {
     "company": "OpenFin",
-    "description": "OpenFin 1819 Define Draggable",
-    "name": "OpenFin 1819 Define Draggable"
+    "description": "OpenFin Define Draggable",
+    "name": "OpenFin Define Draggable"
   },
   "dialogSettings" : {
     "logo" : "https://openfin.co/wp-content/uploads/2014/11/logo.png",
