--- a/app-region-drag-mouse-events/package.json
+++ b/app-region-drag-mouse-events/package.json
@@ -13,6 +13,7 @@
   "author": "Graham Clapham",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "openfin-launcher": "^1.4.2"
   }
 }
